--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,5 +3,7 @@
 <body>
 	<div>
 		<p>This is content on Demo-app index page</p>
+		<p>Test of embedded Ruby and DB access outside of show.erb.html</p>
+		<p><b>Init time: </b><%= @model.init_time %></p>
 	</div>
 </body>
