--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,6 +4,7 @@
 	<div>
 		<p>This is content on Demo-app index page</p>
 		<p>Test of embedded Ruby and DB access outside of show.erb.html</p>
-		<p><b>Init time: </b><%= @model.init_time %></p>
+		<p><b>Init time: </b></p>
+		<img src="../../../images/bLink.PNG" alt="image not shown" />
 	</div>
 </body>
