updated public/img/ images now load dynamically

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,6 +5,6 @@
 		<p>This is content on Demo-app index page</p>
 		<p>Test of embedded Ruby and DB access outside of show.erb.html</p>
 		<p><b>Init time: </b></p>
-		<img src="../../../images/bLink.PNG" alt="image not shown" />
+		<img src="/imgs/bLink.PNG" alt="image not shown" />
 	</div>
 </body>
